# python-academic-subscription

./: .gitignore  .travis.yml  Procfile  README.md  pyproject.toml  requirements.txt
src/: asgi.py  settings.py  urls.py
src/course/: fixtures.yaml  models.py  serializers.py  views.py
src/course/migrations/: 0001_initial.py  0002_rename_max_student_per_period_course_max_students_per_period.py
src/subject/: fixtures.yaml  models.py  serializers.py  views.py
src/subject/migrations/: 0001_initial.py  0002_rename_total_hour_subject_total_hours.py
src/subscription_api/: settings.py  urls.py  wsgi.py
tests/course/: test_views.py
tests/subject/: test_views.py
